--- a/vinaynamadi/base/templates/base/main.html
+++ b/vinaynamadi/base/templates/base/main.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +6,8 @@
     <title>Main</title>
 </head>
 <body>
-{% include 'base/navbar.html' %}
-
+<h1>Navbar Placeholder</h1>
+<hr>
 {% block content %}
 <!-- Content Goes HERE -->
 {% endblock content %}
